--- a/css/style.css
+++ b/css/style.css
@@ -65,14 +65,14 @@ section{
 
 
 
-.header_flex{display: flex;justify-content: space-between;padding: .5rem 2rem;position: sticky;width: 100%;}
+.header_flex{display: flex;justify-content: space-between;padding: .5rem 2rem;position: sticky;width: 100%;background-color: #000;}
 .header_flex .logo{width: 150px;}
 .header_flex .logo a{width: 100%;}
-.header_flex .logo img{width: 100%;}
+.header_flex .logo img{width: 100%;filter: invert(1);}
 nav ul{display: flex;align-items: center;height: 100%;margin-bottom: 0;padding: 0;}
 nav ul li{list-style: none;}
-nav ul li a{color: #000;padding: 0 1rem;text-decoration: none;font-family: 'Montserrat', sans-serif;}
-.banner img{width: 100%;height: 100vh;object-fit: cover;}
+nav ul li a{color: #fff;padding: 0 1rem;text-decoration: none;font-family: 'Montserrat', sans-serif;}
+.banner img{width: 100%;height: 70vh;object-fit: cover;}
 .slider_btns div{background-color: #000;width: 35px;height: 35px;}
 .slider_btns div:after{color: #fff;font-size: 1rem;}
 .two_imgs{width: 100%;position: relative;overflow: hidden;}
@@ -98,13 +98,13 @@ nav ul li a{color: #000;padding: 0 1rem;text-decoration: none;font-family: 'Mont
 .slider_btns>div img{width: 35px;}
 .heading {font-size: 2.5rem;font-weight: bold;}
 .testi_box a{text-decoration: none;color: #fff;display: flex;flex-wrap: wrap;justify-content: space-between;}
-.testi_box{padding: 4rem;background-color: #222;}
+.testi_box{padding: 4rem;background-color: #000;}
 .testi_box a .test_img{width: 100px;height: 100px;}
 .testi_box a .test_img img{width: 100%;height: 100%;border-radius: 50%;object-fit: cover;}
 .testi_box a .test_text{width: 75%;}
 .swiper_btns{margin-top: 2rem}
 .test_text p{font-size: 1rem;line-height: 1.7;}
-.testimonial{background-color: #f1f1f1;}
+/* .testimonial{background-color: #f1f1f1;} */
 .blog_img img{width: 100%;}
 .blog_box a{text-decoration: none;color: #000;}
 .date{font-size: 16px;color: #f32a3d;font-weight: 600;line-height: 1.6;margin: 19px 0 0;border-bottom: 1px solid #cfcfcf;padding-bottom: 16px;margin-bottom: 20px;}
@@ -113,3 +113,22 @@ nav ul li a{color: #000;padding: 0 1rem;text-decoration: none;font-family: 'Mont
 .read_more svg{margin-left: .5rem}
 .sec_head {padding: 0;}
 
+nav{display: flex;justify-content: space-between;}
+.bg_black{background-color: #000;color: #fff;}
+.bg_black .product_des{color: #fff;}
+.bg_black .price{color: #fff;}
+.bg_black .cart_options ul a{color: #fff;}
+/* .bg_black .slider_btns>div img{filter: invert(1);} */
+.bg_black .heading{color: #e5c25a;}
+.user_icon{color: #e5c25a;font-size: 1.5rem;}
+.search{color: #e5c25a;font-size: 1.5rem;}
+.testi_name{color: #e5c25a;}
+footer{background-color: #000;color: #fff;padding: 4rem 0;}
+.footer p{margin-bottom: 0;}
+.footer_flex{display: flex;flex-wrap: wrap;justify-content: space-between;margin: 0 -1rem;}
+.footer_flex>div{width: calc(100% / 3);padding: 0 1rem;}
+.footer_logo a{width: 150px;display: inline-block;margin-bottom: 1rem;}
+.footer_logo a img{width: 100%;filter: invert(1);}
+footer ul{padding: 0;}
+footer ul a{color: #fff;text-decoration: none;}
+.footer_heading{font-size: 1.5rem;}
