--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ button:focus, input:focus, textarea:focus, select:focus, a:hover
 }
 section{
   padding:4rem 0;
-  background-color: #EBECF0;
+  background-color: #262628;
+  color: #e5c25a;
 }
 
 
@@ -77,11 +78,12 @@ nav ul li a{color: #fff;padding: 0 1rem;text-decoration: none;font-family: 'Mont
 .slider_btns div{background-color: #000;width: 35px;height: 35px;}
 .slider_btns div:after{color: #fff;font-size: 1rem;}
 .two_imgs{width: 100%;position: relative;overflow: hidden;}
-.two_imgs:before{content: "";position: absolute;z-index: 0;opacity: 0;top: 0;bottom: 0;left: 0;right: 0;background: #00000070;
-    -webkit-transform: scaleY(1);transform: scaleY(1);-webkit-transform-origin: 50%;transform-origin: 50%;-webkit-transition-property: transform;transition-property: transform;
-    -webkit-transition-duration: 0.6s;transition-duration: 0.6s;-webkit-transition-timing-function: ease-out;transition-timing-function: ease-out;cursor: pointer;}
-.two_imgs:hover:before{-webkit-transform: scaleY(0);transform: scaleY(0);opacity: 1;}
-.two_imgs a{width: 100%;}
+
+.two_imgs a{width: 100%;position: relative;display: block;}
+.two_imgs a p{position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);color: #fff;font-size: 28px;font-weight: bold;z-index: 9999;opacity: 0;transition: .5s ease;}
+.two_imgs a:after{content: '';position: absolute;width: 100%;height: 100%;background-color: #000000a6;top: 0;left: 0;opacity: 0;transition: .5s ease;}
+.two_imgs a:hover:after{opacity: 1;}
+.two_imgs a:hover p{opacity: 1;}
 .two_imgs img{width: 100%;}
 .sec_head{display: flex;justify-content: space-between;}
 .sec_head .slider_btns{position: static;display: flex;}
@@ -107,9 +109,10 @@ nav ul li a{color: #fff;padding: 0 1rem;text-decoration: none;font-family: 'Mont
 .test_text p{font-size: 1rem;line-height: 1.7;}
 /* .testimonial{background-color: #f1f1f1;} */
 .blog_img img{width: 100%;}
-.blog_box a{text-decoration: none;color: #000;}
-.date{font-size: 16px;color: #f32a3d;font-weight: 600;line-height: 1.6;margin: 19px 0 0;border-bottom: 1px solid #cfcfcf;padding-bottom: 16px;margin-bottom: 20px;}
-.blog_text h3{font-family: 'Montserrat', sans-serif;text-transform: capitalize;color: #3b3b3b;font-size: 20px;font-weight: 600;}
+.blog_box a{text-decoration: none;color: #fff;}
+.blog_box a.read_more{text-decoration: none;color: #e5c25a;}
+.date{font-size: 16px;color: #e5c25a;font-weight: 600;line-height: 1.6;margin: 19px 0 0;border-bottom: 1px solid #cfcfcf;padding-bottom: 16px;margin-bottom: 20px;}
+.blog_text h3{font-family: 'Montserrat', sans-serif;text-transform: capitalize;color: #fff;font-size: 20px;font-weight: 600;}
 .read_more {font-size: 1rem;font-weight: bold;}
 .read_more svg{margin-left: .5rem}
 .sec_head {padding: 0;}
@@ -157,3 +160,4 @@ footer ul a{color: #fff;text-decoration: none;}
   .footer_thrd p{font-size: 1.1rem;}
 .cart{color: #e5c25a;font-size: 1.5rem;}
 .heading span {background: -webkit-linear-gradient(45deg, #222, #ccc 80%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}
+.client_logo img{filter: brightness(100);}
