--- a/css/style.css
+++ b/css/style.css
@@ -164,4 +164,4 @@ footer ul a{color: #fff;text-decoration: none;}
 .heading span {background: -webkit-linear-gradient(45deg, #222, #ccc 80%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;}
 .client_logo img{filter: brightness(100);}
 .footer_scnd{width: 15%!important;}
-.cta{background-image: url('../images/map.jpg');}
+.cta{background-image: url('../images/map.png');background-color: #000;padding: 10rem;}
