--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ section{
 
 
 
-.header_flex{display: flex;justify-content: space-between;padding: .5rem 2rem;position: fixed;width: 100%;background-color: transparent;z-index: 9;}
+.header_flex{display: flex;justify-content: space-between;padding: .5rem 2rem;position: fixed;width: 100%;background-color: #000000ab;z-index: 9;}
 .header_flex .logo{width: 200px;}
 .header_flex .logo a{width: 100%;}
 .header_flex .logo img{width: 100%;filter: invert(1);}
@@ -165,3 +165,10 @@ footer ul a{color: #fff;text-decoration: none;}
 .client_logo img{filter: brightness(100);}
 .footer_scnd{width: 15%!important;}
 .cta{background-image: url('../images/map.png');background-color: #000;padding: 10rem;}
+.inner_banner{height: 450px;}
+.inner_banner img{width: 100%;height: 100%;object-fit: cover;}
+.sidebar_title{margin-top: 0;padding: 0 30px 10px 0;color: #fff;background-color: rgba(0,0,0,0);border-bottom: 2px solid #e5c25a;}
+.product_left {width: 23%;}
+.product_flex{display: flex;justify-content: space-between;flex-wrap: wrap;}
+
+
