--- a/css/style.css
+++ b/css/style.css
@@ -208,3 +208,10 @@ select{height: 35px;}
 .counterup-number {font-size: 50px;font-weight: 700;color: #fff;line-height: 1;margin: 0 0 10px;}
 .counter_flex li:last-child{border: 0;}
 .icon_bg { width: 85px; height: 85px; margin: 0 auto; background: #fff; display: flex; align-items: center; justify-content: center; border-radius: 50%; margin-bottom: .5rem;}
+
+
+
+
+@media (max-width: 767px) {
+  nav{display: none;}
+}
