--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,15 @@ select{height: 35px;}
   color: #fff;
   font-size: 1.2rem;
   font-weight: 700;}
-
-
+.product_detail_main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.product_img {width: 50%;height: 650px;transition: transform .5s;overflow: hidden; /* Animation */}
+.product_img:hover{transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */}
+.product_img img{width: 100%;height: 100%;object-fit: cover;}
+.product_right{width: 45%;}
 
 
 @media (max-width: 767px) {
