--- a/css/style.css
+++ b/css/style.css
@@ -257,9 +257,13 @@ button.cart-btn {background: #e5c25a;color: #fff;padding: 0.5rem 1rem;border-rad
 .blog_img{height: 300px;}
 .blog_des {margin-top: 1rem;}
 .blog_des h3{font-family: 'Montserrat', sans-serif;text-transform: capitalize;color: #fff;font-size: 20px;font-weight: 600;line-height: 30px;}
-
-
-
+.blog_img{overflow: hidden;}
+.blog_img img{width: 100%;height: 100%;overflow: hidden;transition: all .5s ease;}
+.blog_img:hover img {transform: scale(1.2);}
+.blog_box a:hover .blog_des h3{color: #e5c25a;}
+.blog_detail_img img{width: 100%;height: 600px;object-fit: cover;margin-bottom: 2rem;}
+.blog_dtl_text h3{font-size: 2.5rem;font-weight: bold;color: #e5c25a;margin-bottom: 1rem;}
+.blog_author{text-align: right;font-size: 1.5rem;font-weight: bold;color: #e5c25a;}
 
 
 @media (max-width: 767px) {
