--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ footer ul a{color: #fff;text-decoration: none;}
   display: flex;
   align-items: center;
   width: fit-content;
+  border: 0;
   margin: 0 auto;}
   .social{display: flex;}
   .social li{margin-right: 1rem;font-size: 1.2rem;}
@@ -227,6 +228,7 @@ select{height: 35px;}
   padding: 0.7rem 2rem;
   border-radius: 5px;
   color: #fff;
+  border: 0;
   font-size: 1.2rem;
   font-weight: 700;}
 .product_detail_main {
@@ -274,7 +276,18 @@ button.cart-btn {background: #e5c25a;color: #fff;padding: 0.5rem 1rem;border-rad
 .dealer_contact li a{color: #fff;text-decoration: none;font-size: 1.3rem;display: inline-block;margin-left: .5rem;}
 .dealer_contact li span{margin-left: .5rem;font-size: 1.3rem;}
 .dealer_contact li svg{font-size: 1.3rem;}
-
+.btns.shop_btn {
+  text-decoration: none;
+  background: #e5c25a;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  margin: 0 auto;
+}
 
 
 
